# T8-Spectrum

./: .gitignore  README.md  main_script.py  pyproject.toml  solicitudes.py
APIfunc/: RR.py
src/t8_spectrum/: api_functions.py
tests/: test_api.py
